# ai-vuln-system

./: .auto-commit.sh  .env.example  .gitignore  README.md  brute.ps1  bypass403_url.txt  dir_file_path.txt  pyproject.toml
cli/: avs.py
docs/: AI辅助漏洞挖掘系统设计指南.md
docs/superpowers/plans/: 2026-06-16-ai-vuln-system-mvp.md  2026-06-16-phase2-platform.md
docs/superpowers/specs/: 2026-06-16-ai-vuln-system-design.md
frontend/: index.html  login.html
reports/https_zqyz.qiboyun.cn/: _26-06-16_20-29-05.txt
scenarios/: edu-rules.md
skills/: core-skill.md  edu-data-collector.md  session.py
src/: __init__.py  auth.py  config.py  database.py  event_bus.py  index.html  main.py  models.py  routes_sessions.py  scheduler.py  session.py
src/api/: routes_reports.py  routes_sessions.py  session.py  websocket_handler.py
src/engine/: __init__.py  browser_tool.py  compressor.py  core-skill.md  deepseek_client.py  prompt_builder.py  report_indexer.py  session.py  tool_executor.py
src/engine/memory/: __init__.py  compressor.py  hermes_store.py  pentagi_memory.py
src/safety/: __init__.py  disk_guard.py
tests/: test_config.py  test_event_bus.py  test_prompt_builder.py  test_scheduler.py  test_session.py  test_tool_executor.py
tools/: brute_admin.py  sourcemap-parser.js
