[project]
name = "ai-vuln-system"
version = "0.1.0"
description = "AI-assisted vulnerability mining system"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"ai_vuln_system" = "src"

[tool.setuptools]
packages = ["ai_vuln_system", "ai_vuln_system.engine", "ai_vuln_system.safety"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
